objects/tffa__BusinessCardDetailXref__c.object
<CustomObject>
    <description>Captures parent-child relationship between business card details which represents the hierarchy of levels within the company for the business cards.</description>
    <fields>
        <fullName>tffa__AccountType__c</fullName>
        <description>Type of business card accounts as per the Companys internal structure and Management Information</description>
        <label>Account type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BusinessCardAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__BusinessCardDetail__c</fullName>
        <description>Reference to the parent Business Card Detail</description>
        <label>Business Card Detail</label>
        <referenceTo>tffa__BusinessCardDetail__c</referenceTo>
        <relationshipLabel>Related BusinessCardDetails</relationshipLabel>
        <relationshipName>BusinessCardDetailXrefs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the related entity is available</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete</description>
        <label>Is deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RelatedBusinessCardDetail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Business Card Detail in the relationship</description>
        <label>Related BusinessCardDetail</label>
        <referenceTo>tffa__BusinessCardDetail__c</referenceTo>
        <relationshipLabel>Related BusinessCardDetail</relationshipLabel>
        <relationshipName>RelatedBusinessCardDetailXrefs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Card Detail Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Business Card Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>